paintapp/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paintapp
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paintapp
  template:
    metadata:
      labels:
        app: paintapp
    spec:
      containers:
        - name: paintapp
          image: jaynericguy/paintapp-django-armv8:latest
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "1"
              memory: 2000Mi
            requests:
              cpu: 1000m
              memory: 2000Mi
