paintapp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: paintapp-service
  namespace: default
spec:
  selector:
    app: paintapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
