paintapp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paintapp-ingress
  namespace: default
  annotations:
    #kubernetes.io/ingress.class: haproxy
    #cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/issuer: ca-issuer
    cert-manager.io/issuer-kind: Issuer
    ingress.kubernetes.io/whitelist-source-range: "0.0.0.0"
    kubernetes.io/ingress.allow-http: "false"
    ingress.kubernetes.io/ssl-passthrough: "true"
    #kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: paint.junder.app
      http:
        paths:
          - path: /paintapp
            pathType: Prefix
            backend:
              service:
                name: paintapp-service
                port:
                  number: 80
  tls:
    - hosts:
      - paint.junder.app
      secretName: junderapp
